--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/wolfeidau/instruments.git"
+    "url": "git://github.com/wolfeidau/follow-file.git"
   },
   "keywords": [
     "file",
