Test and fix append watch mechanism.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "license": "MIT",
   "devDependencies": {
     "chai": "~1.6.0",
-    "mocha": "~1.10.0"
+    "mocha": "~1.10.0",
+    "mkdirp": "~0.3.5",
+    "rimraf": "~2.1.4"
   },
   "dependencies": {
     "debug": "~0.7.2",
